revert some fixes that break code