@@ -1,3 +1,4 @@
+
 package edu.bsu.cs.services;
 
 import com.github.twitch4j.helix.domain.UserList;
@@ -27,7 +28,7 @@ public class ObtainStreamerID {
                     .execute();
 
             return userList != null && !userList.getUsers().isEmpty()
-                    ? userList.getUsers().getFirst().getId()
+                    ? userList.getUsers().get(0).getId()
                     : null;
         } catch (Exception e) {
             return null;
@@ -44,7 +45,7 @@ public class ObtainStreamerID {
 
         SearchListResponse response = request.execute();
         if (response.getItems() != null && !response.getItems().isEmpty()) {
-            return response.getItems().getFirst().getSnippet().getChannelId();
+            return response.getItems().get(0).getSnippet().getChannelId();
         }
 
         YouTube.Channels.List handleRequest = context.youtubeService.channels()
@@ -54,8 +55,9 @@ public class ObtainStreamerID {
 
         ChannelListResponse handleResponse = handleRequest.execute();
         if (handleResponse.getItems() != null && !handleResponse.getItems().isEmpty()) {
-            return handleResponse.getItems().getFirst().getId();
+            return handleResponse.getItems().get(0).getId();
         }
+
         return null;
     }
 
